Fixed draft toolbar action z-index for dropdown actions.

--- a/Js/Backend/Assets/styles/sass/custom.scss
+++ b/Js/Backend/Assets/styles/sass/custom.scss
@@ -432,7 +432,7 @@
         display: block;
         margin-right: 6px;
         position: relative;
-        z-index: 0;
+        z-index: 1;
 
         button:not(.dropdown-toggle) {
           padding: 7px;
